# KAN-Tutorial

./: .gitignore  README.md  environment.yml  example.env  pyproject.toml  requirements.txt  utils.py
kan_tutorial/: __init__.py  grids.py  stacked_splines.py  symbolic.py  utils.py
notebooks/: 1_splines.ipynb  2_stacked_splines.ipynb  3_grids.ipynb  4_symbolic_learning.ipynb
scripts/: 1_interactive_bspline.py  2_fit_bspline.py  bsplines-decomposition.py  bsplines.py  interactive_bspline.py
tex/: an_251.tex  beamerthemeie.sty  kan_2331.tex  kan_251.tex  kan_2xy.tex  kan_diagram.tex  kan_slides.bcf  kan_slides.blg  kan_slides.run.xml  kan_slides.tex  references.bib
